# LMS

./: .gitignore  docker-compose.yml  pyproject.toml  twelve_factor_app.md
app/: config.py  db.py  main.py
app/alembic/versions/: 2024_09_30_2032-28a0d2f371c7_initial_migration.py  2024_10_15_1758-6de003b8fa4c_add_password_to_user.py  2024_10_22_1802-2b7faed33de1_rename_session_table_column_to_session_.py
app/certs/: jwt-public.pem
app/crud/: session.py  user.py
app/models/: __init__.py  base.py  course.py  enrollment.py  lesson.py  new_models.py  role.py  session.py  user.py
app/routers/: __init__.py  login.py  user.py
app/schemas/: __init__.py  session.py  user.py
app/utils/: chk.py  security.py
backend/: auth_tmp.py  config.py  db.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_09_30_2032-28a0d2f371c7_initial_migration.py  2024_10_14_2038-c6e441bcb96e_frist_lms_db.py
backend/certs/: jwt-private.pem
backend/models/: __init__.py  attempt.py  attendance.py  base.py  block.py  blocktype.py  group.py  role.py  session.py  topic.py  user.py
backend/routers/: __init__.py  user.py
backend/schemas/: __init__.py  session.py  user.py
backend/utils/: __init__.py
frontend/: readme.md
